@@ -1,6 +1,7 @@
 126
 -- pulled latest from tom
 -- added paramaters to doc reference section
+-- flow state updates
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
